Add Esperienze section to index.html and fix HTML structure

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="it">
-</section><head>
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="wid</div>th=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Francesco Giarratana - Profilo</title>
     <style>
         body {
@@ -55,6 +55,22 @@
             border-radius: 20px;
             font-size: 14px;
         }
+        .experience-item {
+            margin-bottom: 16px;
+        }
+        .experience-item h3 {
+            margin: 0 0 6px 0;
+            font-size: 18px;
+            color: #2c3e50;
+        }
+        .experience-item .meta {
+            font-size: 14px;
+            color: #666;
+            margin-bottom: 6px;
+        }
+        .experience-item p {
+            margin: 0 0 8px 0;
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -82,7 +98,7 @@
     <div class="container">
         <section class="profile section">
             <h2>Chi sono</h2>
-            <p>Benvenuto nel mio profilo! Sono Francesco, uno studente appassionato di informatica presso l'Università di Catania. Mi interesso particolarmente di sviluppo web, reti di calcolatori e intelligenza artificiale.</p>
+            <p>Benvenuto nel mio profilo! Sono Francesco, uno studente appassionato di informatica presso l'Università di Catania. Mi interesso particolarmente di sviluppo web, reti di calcolatori e [...]</p>
         </section>
 
         <section class="profile section">
@@ -114,6 +130,78 @@
             <p><strong>Sito Web Personale</strong> - Sviluppo di un sito web responsive utilizzando HTML, CSS e JavaScript.</p>
             <p><strong>Analisi di Reti</strong> - Studio e implementazione di protocolli di rete.</p>
             <p><strong>App Mobile</strong> - Sviluppo di un'applicazione mobile per la gestione delle attività.</p>
+        </section>
+
+        <section class="profile section">
+            <h2>Esperienze</h2>
+
+            <div class="experience-item">
+                <h3>Membro della Commissione Paritetica - Università degli Studi di Trieste</h3>
+                <div class="meta">mag 2025 - Presente · Trieste, Friuli-Venezia Giulia</div>
+                <p>Membro della Commissione Paritetica del Dipartimento di Ingegneria e Architettura. Attività di rappresentanza studentesca e partecipazione a incontri istituzionali.</p>
+                <p><strong>Competenze:</strong> Public speaking · Pubbliche relazioni · Leadership studentesca</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Rappresentante degli studenti - Dipartimento di Ingegneria e Architettura</h3>
+                <div class="meta">apr 2025 - Presente · Trieste, Friuli-Venezia Giulia</div>
+                <p>Rappresentante degli studenti del dipartimento, coordinamento tra studenti e corpo docente, promozione iniziative e ascolto delle esigenze della comunità studentesca.</p>
+                <p><strong>Competenze:</strong> Public speaking · Pubbliche relazioni · Leadership studentesca</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Consigliere nel Consiglio degli Studenti - Università degli Studi di Trieste</h3>
+                <div class="meta">apr 2025 - Presente · Trieste, Friuli-Venezia Giulia</div>
+                <p>Consigliere eletto nel Consiglio degli Studenti, coinvolto nelle attività di governance studentesca.</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Rappresentante degli studenti - Corso di Ingegneria Informatica ed Elettronica</h3>
+                <div class="meta">apr 2024 - Presente · Trieste, Friuli-Venezia Giulia</div>
+                <p>Rappresentante del corso, supporto agli studenti e dialogo con i docenti per questioni didattiche.</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Membro IT - ASTREO</h3>
+                <div class="meta">gen 2025 - Presente · Trieste, Friuli-Venezia Giulia</div>
+                <p>Supporto alle attività IT dell'associazione ASTREO, gestione di servizi e operazioni tecniche.</p>
+                <p><strong>Competenze:</strong> Gestione IT · IT operations</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Intervistatore di ricerca - TPS Pro (a contratto)</h3>
+                <div class="meta">lug 2024 - set 2024 · Friuli-Venezia Giulia (in sede)</div>
+                <p>Attività svolta nell’ambito dell’aggiornamento del Piano Regionale dei Trasporti: somministrazione di interviste ai conducenti in postazioni strategiche per rilevare origine e destinazione degli spostamenti. Interviste effettuate tramite link online e moduli cartacei, con gestione autonoma del flusso e collaborazione con la Polizia Locale.</p>
+                <p><strong>Competenze:</strong> Sondaggi di ricerca · Pianificazione dei trasporti · Interviste e colloqui</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Rappresentante d'Istituto - Liceo Scientifico Galileo Galilei</h3>
+                <div class="meta">ott 2022 - lug 2023 · Trieste, Friuli-Venezia Giulia</div>
+                <p>Rappresentante d'Istituto con attività di coordinamento e comunicazione tra studenti e corpo docente.</p>
+                <p><strong>Competenze:</strong> Leadership studentesca · Comunicazione · Public speaking</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Fondatore - Torneo delle scuole di pallavolo di Trieste</h3>
+                <div class="meta">gen 2023 - apr 2023 · Trieste, Friuli-Venezia Giulia</div>
+                <p>Ideazione e organizzazione di un torneo interscolastico con 13 squadre, gestione sponsor, promozione social, organizzazione partite e logistica. Evento svolto presso la palestra Vascotto il 24 e 25 aprile 2023.</p>
+                <p><strong>Competenze:</strong> Gestione logistica · Gestione eventi · Leadership organizzativa</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Volontariato - Animatore</h3>
+                <div class="meta">giu 2022 - lug 2022 · Trieste, Friuli-Venezia Giulia</div>
+                <p>Attività pomeridiane come animatore per bambini (8-12 anni): laboratori didattici, attività ludico-ricreative, sessioni sportive come istruttore di pallavolo. Ho inoltre realizzato e montato video giornalieri delle attività.</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Drone Operator - InsiVela</h3>
+                <div class="meta">set 2021 - set 2021 · Trieste, Friuli-Venezia Giulia</div>
+                <p>Riprese aeree con drone durante la regata CRAL INSIEL per scopi documentativi e promozionali, cura delle operazioni di volo e delle inquadrature.</p>
+                <p><strong>Competenze:</strong> Aeromobile a pilotaggio remoto · Fotografia aerea · Pilotaggio</p>
+            </div>
+
         </section>
 
         <section class="profile section">
