--- a/index.html
+++ b/index.html
@@ -3,221 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Francesco Giarratana - Profilo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        header {
-            background: #2c3e50;
-            color: white;
-            padding: 30px 0;
-            text-align: center;
-        }
-        .profile-img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 3px solid white;
-        }
-        .profile {
-            background: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2 {
-            color: #2c3e50;
-        }
-        .section {
-            margin-bottom: 30px;
-        }
-        .skills {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-        .skill {
-            background: #e74c3c;
-            color: white;
-            padding: 5px 15px;
-            border-radius: 20px;
-            font-size: 14px;
-        }
-        .experience-item {
-            margin-bottom: 16px;
-        }
-        .experience-item h3 {
-            margin: 0 0 6px 0;
-            font-size: 18px;
-            color: #2c3e50;
-        }
-        .experience-item .meta {
-            font-size: 14px;
-            color: #666;
-            margin-bottom: 6px;
-        }
-        .experience-item p {
-            margin: 0 0 8px 0;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #2c3e50;
-            color: white;
-        }
-        .social-links {
-            margin-top: 20px;
-        }
-        .social-links a {
-            color: #2c3e50;
-            margin: 0 10px;
-            font-size: 24px;
-            text-decoration: none;
-        }
-    </style>
+    <title> Francesco Giarratana</title>
 </head>
 <body>
-    <header>
-        <img src="https://via.placeholder.com/150" alt="Francesco Giarratana" class="profile-img">
-        <h1>Francesco Giarratana</h1>
-        <p>Studente di Informatica</p>
-    </header>
-
-    <div class="container">
-        <section class="profile section">
-            <h2>Chi sono</h2>
-            <p>Benvenuto nel mio profilo! Sono Francesco, uno studente appassionato di informatica presso l'Università di Catania. Mi interesso particolarmente di sviluppo web, reti di calcolatori e [...]</p>
-        </section>
-
-        <section class="profile section">
-            <h2>Competenze</h2>
-            <div class="skills">
-                <span class="skill">HTML</span>
-                <span class="skill">CSS</span>
-                <span class="skill">JavaScript</span>
-                <span class="skill">Java</span>
-                <span class="skill">Python</span>
-                <span class="skill">Reti di Calcolatori</span>
-                <span class="skill">Database SQL</span>
-            </div>
-        </section>
-
-        <section class="profile section">
-            <h2>Formazione</h2>
-            <p><strong>Laurea in Ingegneria Informatica</strong><br>
-            Università degli studi di Trieste<br>
-            2020 - Presente</p>
-            
-            <p><strong>Diploma di Scuola Superiore</strong><br>
-            Liceo Scientifico<br>
-            2015 - 2020</p>
-        </section>
-
-        <section class="profile section">
-            <h2>Progetti</h2>
-            <p><strong>Sito Web Personale</strong> - Sviluppo di un sito web responsive utilizzando HTML, CSS e JavaScript.</p>
-            <p><strong>Analisi di Reti</strong> - Studio e implementazione di protocolli di rete.</p>
-            <p><strong>App Mobile</strong> - Sviluppo di un'applicazione mobile per la gestione delle attività.</p>
-        </section>
-
-        <section class="profile section">
-            <h2>Esperienze</h2>
-
-            <div class="experience-item">
-                <h3>Membro della Commissione Paritetica - Università degli Studi di Trieste</h3>
-                <div class="meta">mag 2025 - Presente · Trieste, Friuli-Venezia Giulia</div>
-                <p>Membro della Commissione Paritetica del Dipartimento di Ingegneria e Architettura. Attività di rappresentanza studentesca e partecipazione a incontri istituzionali.</p>
-                <p><strong>Competenze:</strong> Public speaking · Pubbliche relazioni · Leadership studentesca</p>
-            </div>
-
-            <div class="experience-item">
-                <h3>Rappresentante degli studenti - Dipartimento di Ingegneria e Architettura</h3>
-                <div class="meta">apr 2025 - Presente · Trieste, Friuli-Venezia Giulia</div>
-                <p>Rappresentante degli studenti del dipartimento, coordinamento tra studenti e corpo docente, promozione iniziative e ascolto delle esigenze della comunità studentesca.</p>
-                <p><strong>Competenze:</strong> Public speaking · Pubbliche relazioni · Leadership studentesca</p>
-            </div>
-
-            <div class="experience-item">
-                <h3>Consigliere nel Consiglio degli Studenti - Università degli Studi di Trieste</h3>
-                <div class="meta">apr 2025 - Presente · Trieste, Friuli-Venezia Giulia</div>
-                <p>Consigliere eletto nel Consiglio degli Studenti, coinvolto nelle attività di governance studentesca.</p>
-            </div>
-
-            <div class="experience-item">
-                <h3>Rappresentante degli studenti - Corso di Ingegneria Informatica ed Elettronica</h3>
-                <div class="meta">apr 2024 - Presente · Trieste, Friuli-Venezia Giulia</div>
-                <p>Rappresentante del corso, supporto agli studenti e dialogo con i docenti per questioni didattiche.</p>
-            </div>
-
-            <div class="experience-item">
-                <h3>Membro IT - ASTREO</h3>
-                <div class="meta">gen 2025 - Presente · Trieste, Friuli-Venezia Giulia</div>
-                <p>Supporto alle attività IT dell'associazione ASTREO, gestione di servizi e operazioni tecniche.</p>
-                <p><strong>Competenze:</strong> Gestione IT · IT operations</p>
-            </div>
-
-            <div class="experience-item">
-                <h3>Intervistatore di ricerca - TPS Pro (a contratto)</h3>
-                <div class="meta">lug 2024 - set 2024 · Friuli-Venezia Giulia (in sede)</div>
-                <p>Attività svolta nell’ambito dell’aggiornamento del Piano Regionale dei Trasporti: somministrazione di interviste ai conducenti in postazioni strategiche per rilevare origine e destinazione degli spostamenti. Interviste effettuate tramite link online e moduli cartacei, con gestione autonoma del flusso e collaborazione con la Polizia Locale.</p>
-                <p><strong>Competenze:</strong> Sondaggi di ricerca · Pianificazione dei trasporti · Interviste e colloqui</p>
-            </div>
-
-            <div class="experience-item">
-                <h3>Rappresentante d'Istituto - Liceo Scientifico Galileo Galilei</h3>
-                <div class="meta">ott 2022 - lug 2023 · Trieste, Friuli-Venezia Giulia</div>
-                <p>Rappresentante d'Istituto con attività di coordinamento e comunicazione tra studenti e corpo docente.</p>
-                <p><strong>Competenze:</strong> Leadership studentesca · Comunicazione · Public speaking</p>
-            </div>
-
-            <div class="experience-item">
-                <h3>Fondatore - Torneo delle scuole di pallavolo di Trieste</h3>
-                <div class="meta">gen 2023 - apr 2023 · Trieste, Friuli-Venezia Giulia</div>
-                <p>Ideazione e organizzazione di un torneo interscolastico con 13 squadre, gestione sponsor, promozione social, organizzazione partite e logistica. Evento svolto presso la palestra Vascotto il 24 e 25 aprile 2023.</p>
-                <p><strong>Competenze:</strong> Gestione logistica · Gestione eventi · Leadership organizzativa</p>
-            </div>
-
-            <div class="experience-item">
-                <h3>Volontariato - Animatore</h3>
-                <div class="meta">giu 2022 - lug 2022 · Trieste, Friuli-Venezia Giulia</div>
-                <p>Attività pomeridiane come animatore per bambini (8-12 anni): laboratori didattici, attività ludico-ricreative, sessioni sportive come istruttore di pallavolo. Ho inoltre realizzato e montato video giornalieri delle attività.</p>
-            </div>
-
-            <div class="experience-item">
-                <h3>Drone Operator - InsiVela</h3>
-                <div class="meta">set 2021 - set 2021 · Trieste, Friuli-Venezia Giulia</div>
-                <p>Riprese aeree con drone durante la regata CRAL INSIEL per scopi documentativi e promozionali, cura delle operazioni di volo e delle inquadrature.</p>
-                <p><strong>Competenze:</strong> Aeromobile a pilotaggio remoto · Fotografia aerea · Pilotaggio</p>
-            </div>
-
-        </section>
-
-        <section class="profile section">
-            <h2>Contatti</h2>
-            <p>Email: francesco.giarratana4@gmail.com</p>
-            <p>Telefono: </p>
-            <div class="social-links">
-                <a href="#" title="LinkedIn">LinkedIn</a>
-                <a href="#" title="GitHub">GitHub</a>
-                <a href="#" title="Twitter">Twitter</a>
-            </div>
-        </section>
-    </div>
-
-    <footer>
-        <p>© 2025 Francesco Giarratana. Tutti i diritti riservati.</p>
-    </footer>
+<nav>
+    <a href="index.html">Home</a> |
+    <a href="FrancescoGiarratana.html">Profilo</a> |
+    <a href="Progetti.html">Progetti</a> |
+    <a href="Contatti.html">Contatti</a>
+</nav>
+    <h1>Francesco Giarratana - Profilo</h1>
+    <img src="francescogiarratana.jpeg" alt="Foto di Francesco Giarratana" class="profile-img">
+<h1>Chi sono</h1>
+    <p>Sono uno studente di ingegneria informatica appassionato di nuove tecnologie e sviluppo software.
+    </p>
+    
+    <h2>Istruzione</h2>
+    <ul>
+        <li>Laurea Triennale in Ingegneria Elettronica ed Informatica curriculum Informatica - Università degli Studi di Trieste (2023 - in corso) <a href="https://www.units.it" >
+<img src="universitadeglistudiditrieste_logo.jpeg" alt="Università degli Studi di Trieste Logo" width="50" height="50">
+</a></li>
+        <li>Diploma di Maturità Scientifica - Liceo Scientifico "Galileo Galilei", Trieste (2018 - 2023)</li>
+    </ul>
+    <h2>Competenze Tecniche</h2>
+    <img src="Java_logo.png" alt="Java Logo" width="50" height="50">
+    <img src="Python_logo.png" alt="Python Logo" width="50" height="50">
+    <img src="HTML5_logo.png" alt="HTML5 Logo" width="50" height="50">
+    <h2>Responsabilità accademiche <img src="universitadeglistudiditrieste_logo.jpeg" width="50" height="50" alt="Università di Trieste Logo"></h2>
+        <li>Rappresentante degli studenti del dipartimento di Ingegneria e Architettura</li>
+        <li>Consigliere nel Consiglio Degli Studenti</li>
+    <h2>Responsabilità accademiche <img src="universitadeglistudiditrieste_logo.jpeg" width="50" height="50" alt="Università di Trieste Logo"></h2>
+    <ul>
+        <li>Rappresentante degli studenti del dipartimento di Ingegneria e Architettura</li>
+        <li>Consigliere nel Consiglio Degli Studenti</li>
+        <li>Rappresentante degli studenti del corso di Ingegneria Informatica ed Elettronica</li>
+    </ul>
+    <h2>Associazioni Accademiche</h2>
+    <ul>
+        <li>LAM - Lista Autonomamente <img src="LAM_units_logo.jpeg" alt="LAM Logo" width="50" height="50"></li>
+        <li>ASTREO <img src="astreo_units_logo.jpeg" alt="ASTREO Logo" width="50" height="50"></li>
+    </ul>
 </body>
 </html>
