--- a/Contatti.html
+++ b/Contatti.html
@@ -14,7 +14,7 @@
 <h2>Contatti</h2>
     <ul>
         <li>Email:
-            <a href="mailto:francesco.giarratana4@gmail.com"> <img src="email_icon.png" alt="Email Icon" width="20" height="20"> francesco.giarratana4@gmail.com </a>
+            <a href="mailto:francesco.giarratana4@gmail.com"> <img src="email_icon.jpg" alt="Email Icon" width="20" height="20"> francesco.giarratana4@gmail.com </a>
         </li>
         <li>LinkedIn:
             <a href="https://www.linkedin.com/in/francesco-giarratana-2a9309241/"> <img src="linkedin_icon.png" alt="LinkedIn Icon" width="20" height="20"> linkedin.com/in/francesco-giarratana-2a9309241/ </a>
