Fix GitHub link in Contatti.html

--- a/Contatti.html
+++ b/Contatti.html
@@ -20,7 +20,7 @@
             <a href="https://www.linkedin.com/in/francesco-giarratana-2a9309241/"> <img src="linkedin_icon.png" alt="LinkedIn Icon" width="20" height="20"> linkedin.com/in/francesco-giarratana-2a9309241/ </a>
         </li>
         <li>GitHub:
-            <a href="https://github.com/francescogiarratana"> <img src="github_icon.png" alt="GitHub Icon" width="20" height="20"> github.com/francesco1923 </a>
+            <a href="https://github.com/francescogiarratana"> <img src="github_icon.png" alt="GitHub Icon" width="20" height="20"> github.com/francescogiarratana</a>
         </li>
     </ul>
 </html>
