--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <nav>
     <a href="index.html">Home</a> |
-    <a href="FrancescoGiarratana.html">Profilo</a> |
+    <a href="Profilo.html">Profilo</a> |
     <a href="Progetti.html">Progetti</a> |
     <a href="Contatti.html">Contatti</a>
 </nav>
