--- a/Contatti.html
+++ b/Contatti.html
@@ -8,6 +8,7 @@
 <nav>  
     <a href="index.html">Home</a> |
     <a href="FrancescoGiarratana.html">Profilo</a> |
+    <a href="Appuntamenti.html">Appuntamenti</a> |
     <a href="Progetti.html">Progetti</a> |
     <a href="Contatti.html">Contatti</a>
 </nav>
