Add link to Appuntamenti in navigation menu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <nav>
     <a href="index.html">Home</a> |
     <a href="Profilo.html">Profilo</a> |
+    <a href="Appuntamenti.html">Appuntamenti</a> |
     <a href="Progetti.html">Progetti</a> |
     <a href="Contatti.html">Contatti</a>
 </nav>
