--- a/Appuntamenti.html
+++ b/Appuntamenti.html
@@ -17,10 +17,7 @@
     <p>Di seguito è possibile visualizzare il mio calendario degli appuntamenti.</p>
     <p>Per aggiungere un nuovo appuntamento, clicca <a href="https://calendar.google.com/calendar/u/0/r?tab=mc&pli=1">qui</a> per accedere al mio Google Calendar.</p>
     <p>Puoi visualizzare il calendario direttamente qui sotto:</p>
-    <iframe 
-    src="https://calendar.google.com/calendar/u/0?cid=ZnJhbmNlc2NvLmdpYXJyYXRhbmE0QGdtYWlsLmNvbQ"
-    style="border: 0" width="800" height="600" frameborder="0" scrolling="no">
-    </iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?src=francesco.giarratana4%40gmail.com&ctz=Europe%2FRome" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 <footer>
   © 2025 Francesco Giarratana
 </footer>
