--- a/Appuntamenti.html
+++ b/Appuntamenti.html
@@ -15,9 +15,13 @@
     </nav>
     <h1>Appuntamenti</h1>
     <p>Di seguito è possibile visualizzare il mio calendario degli appuntamenti.</p>
-    <p>Per aggiungere un nuovo appuntamento, clicca <a href="https://calendar.google.com/calendar/u/0/r?tab=mc&pli=1">qui</a> per accedere al mio Google Calendar.</p>
+    <p>Per aggiungere un nuovo appuntamento, scegli l'appuntamento di un'ora tra i seguenti </p>
+    <!-- Google Calendar Appointment Scheduling begin -->
+    <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2WZFNc5TCGSdBYo3LEtvVsXPfdyLMo0vnnedgwuX5lTgUxfgkfRWlwuxY6B3IAGpKnvKeNMVn-?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+    <!-- end Google Calendar Appointment Scheduling -->
     <p>Puoi visualizzare il calendario direttamente qui sotto:</p>
     <iframe src="https://calendar.google.com/calendar/embed?src=francesco.giarratana4%40gmail.com&ctz=Europe%2FRome" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
 <footer>
   © 2025 Francesco Giarratana
 </footer>
