--- a/Appuntamenti.html
+++ b/Appuntamenti.html
@@ -19,7 +19,7 @@
     <!-- Google Calendar Appointment Scheduling begin -->
     <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2WZFNc5TCGSdBYo3LEtvVsXPfdyLMo0vnnedgwuX5lTgUxfgkfRWlwuxY6B3IAGpKnvKeNMVn-?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
     <!-- end Google Calendar Appointment Scheduling -->
-    <p>Puoi visualizzare il calendario direttamente qui sotto:</p>
+    <p>Puoi visualizzare il calendario in modo dettagliato direttamente qui sotto:</p>
     <iframe src="https://calendar.google.com/calendar/embed?src=francesco.giarratana4%40gmail.com&ctz=Europe%2FRome" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 <footer>
